--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ sudo: false
 language: ruby
 cache: bundler
 rvm:
-  - 2.6.3
-before_install: gem install bundler -v 1.17.2
+  - 2.4.7
+script:
+  - bundle exec rspec spec
+services:
+  - redis
